--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -83,7 +83,6 @@
     "\n",
     "    # quantum config\n",
     "    quantum_config = json_config[config[\"quantum_config\"]]\n",
-    "    quantum_config[\"qbackend\"] = input(\"Qiskit real device backend: \")\n",
     "\n",
     "    # manual settings\n",
     "    if config[\"quick_test\"] == True:\n",
@@ -425,28 +424,28 @@
     "\n",
     "# c_df, b_df, q_df = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()\n",
     "# num_ptcs_range = range(2, 16+1, 2)\n",
-    "# for rnd_seed, num_pt_ptcs in product(range(10), num_ptcs_range):\n",
+    "# for rnd_seed, num_pt_ptcs in product(range(3), num_ptcs_range):\n",
     "#     for data_config in data_configs:\n",
     "#         data_config[\"num_pt_ptcs\"] = num_pt_ptcs\n",
     "#         config[\"rnd_seed\"] = rnd_seed\n",
     "#         L.seed_everything(config[\"rnd_seed\"])\n",
     "\n",
-    "        # # classical\n",
-    "        # for g_dim in [3,6,9]:\n",
-    "        #     _, summary = execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
-    "        #     c_df = pd.concat((c_df, summary))\n",
-    "        #     c_df.to_csv(f\"csv/classical-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n",
+    "#         # # classical\n",
+    "#         # for g_dim in [3,6,9]:\n",
+    "#         #     _, summary = execute_classical(data_config, go=g_dim, gh=g_dim, gl=2, lr=1E-3, mode=\"predict\")\n",
+    "#         #     c_df = pd.concat((c_df, summary))\n",
+    "#         #     c_df.to_csv(f\"csv/classical-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n",
     "\n",
-    "        # # best classical\n",
-    "        # _, summary = execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
-    "        # b_df = pd.concat((b_df, summary))\n",
-    "        # b_df.to_csv(f\"csv/classical-{config['num_bin_data']}_best.csv\", index=False)\n",
+    "#         # # best classical\n",
+    "#         # _, summary = execute_classical(data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
+    "#         # b_df = pd.concat((b_df, summary))\n",
+    "#         # b_df.to_csv(f\"csv/classical-{config['num_bin_data']}_best.csv\", index=False)\n",
     "\n",
-    "        # # quantum\n",
-    "        # for q in [3,6,9]:\n",
-    "        #     _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
-    "        #     q_df = pd.concat((q_df, summary))\n",
-    "        #     q_df.to_csv(f\"csv/qnn{q}_gl1_gr{q}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)\n"
+    "#         # quantum\n",
+    "#         for q in [3,6,9]:\n",
+    "#             _, summary = execute_quantum(data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"predict\")\n",
+    "#             q_df = pd.concat((q_df, summary))\n",
+    "#         q_df.to_csv(f\"csv/qnn{q}_gl1_gr{q}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-{config['num_bin_data']}_{rnd_seed}.csv\", index=False)"
    ]
   },
   {
