--- a/result_ibmq.ipynb
+++ b/result_ibmq.ipynb
@@ -2,17 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from qiskit_ibm_provider import IBMProvider\n",
     "from itertools import product"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IBMProvider.save_account(token=<INSERT_IBM_QUANTUM_TOKEN>)\n",
+    "# provider = IBMProvider()\n",
+    "# job_id   = \"cp4dpjambjng008jmwvg\"\n",
+    "# result   = provider.retrieve_job(job_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +36,7 @@
     "    result = result.item()[abbrev]\n",
     "    print(f\"{abbrev} in backend {backend}:\")\n",
     "    print(f\"IBMQ Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_ibmq'])}\")\n",
-    "    print(f\"QASM Frobinius norm = {np.linalg.norm(result['meas_penl']-result['qasm_ibmq'])}\")\n",
+    "    print(f\"QASM Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_qasm'])}\")\n",
     "    print(\"-\"*100)"
    ]
   }
