--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,20 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"\"\n",
-    "suffix  = \"go1024_gh1024_gl4\"\n",
+    "date    = \"20231212\"\n",
+    "suffix  = \"\"\n",
     "project = \"g_main\"\n",
+    "state   = \"crashed\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    # if date in run.id and suffix in run.id:\n",
-    "    if date in run.id and suffix in run.id:\n",
+    "    if (run.state == state) and (date in run.id) and (suffix in run.id):\n",
     "        print(run.id)\n",
     "        # run.delete()\n",
     "    # elif run.id is None:\n",
