--- a/result_ibmq.ipynb
+++ b/result_ibmq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BB-QCD in backend ibm_cusco:\n",
+      "IBMQ Frobinius norm = 5.611314296722412\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "TT-QCD in backend ibm_cusco:\n",
+      "IBMQ Frobinius norm = 5.236304759979248\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "backends = [\"ibm_cairo\", \"ibmq_kolkata\"]\n",
+    "shots = 1024\n",
+    "backends = [\"ibm_cusco\"]\n",
     "\n",
     "for abbrev, backend in product([\"BB-QCD\", \"TT-QCD\"], backends):\n",
-    "    result = np.load(f\"ibmq/{backend}_r0-p_2_n25_b300-3_1_3.npy\", allow_pickle=True)\n",
-    "    result = result.item()[abbrev]\n",
+    "    result = np.load(f\"ibmq/{backend}-s{1024}-{abbrev}_r0-p_4_n25_b10-9_1_9.npy\", allow_pickle=True)\n",
+    "    result = result.item()\n",
     "    print(f\"{abbrev} in backend {backend}:\")\n",
     "    print(f\"IBMQ Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_ibmq'])}\")\n",
-    "    print(f\"QASM Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_qasm'])}\")\n",
     "    print(\"-\"*100)"
    ]
   }
