--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#--------------------------------------------------------------------------\n",
-      "#                         FastJet release 3.4.0\n",
-      "#                 M. Cacciari, G.P. Salam and G. Soyez                  \n",
-      "#     A software package for jet finding and analysis at colliders      \n",
-      "#                           http://fastjet.fr                           \n",
-      "#\t                                                                      \n",
-      "# Please cite EPJC72(2012)1896 [arXiv:1111.6097] if you use this package\n",
-      "# for scientific work and optionally PLB641(2006)57 [hep-ph/0512210].   \n",
-      "#                                                                       \n",
-      "# FastJet is provided without warranty under the GNU GPL v2 or higher.  \n",
-      "# It uses T. Chan's closest pair algorithm, S. Fortune's Voronoi code,\n",
-      "# CGAL and 3rd party plugin jet algorithms. See COPYING file for details.\n",
-      "#--------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import torch\n",
@@ -43,10 +16,10 @@
     "import g_main\n",
     "import module_model\n",
     "\n",
-    "shots = 100000\n",
+    "shots = 1024\n",
     "\n",
     "config = g_main.json_config[\"config\"]\n",
-    "config[\"batch_size\"]   = 300\n",
+    "config[\"batch_size\"]   = 10 # 300\n",
     "config[\"rnd_seed\"]     = 0\n",
     "config[\"num_pt_ptcs\"]  = 4\n",
     "config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
@@ -58,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,38 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# DataLog: Now loading hdf5 file VzToZhToVevebb|c800_1000_r0.hdf5\n",
-      "# DataLog: Successfully loading hdf5 file VzToZhToVevebb|c800_1000_r0.hdf5\n",
-      "\n",
-      "# DataLog: Now loading hdf5 file VzToQCD|c800_1000_r0.hdf5\n",
-      "# DataLog: Successfully loading hdf5 file VzToQCD|c800_1000_r0.hdf5\n",
-      "\n",
-      "\n",
-      "# DataLog: Max number of particles = 4\n",
-      "\n",
-      "# ModelLog: ckpt found at ./ckpt/QuantumRotQCGNN_qidx3_qnn3_gl1_gr3 | BB-QCD_cut(800, 1000)_ptc8_bin10-500_R0 | 20231105_slurm_0/checkpoints/epoch=29-step=2400.ckpt\n",
-      "# ModelLog: Quantum device  = default.qubit | Qubits (IR, WK, NR) = (2, 0, 3)\n",
-      "ModelLog: model.phi.net.0.weights ---> phi.net.0.weights\n",
-      "ModelLog: model.mlp.net.weight ---> mlp.net.weight\n",
-      "ModelLog: model.mlp.net.bias ---> mlp.net.bias\n",
-      "# ModelLog: ckpt found at ./ckpt/QuantumRotQCGNN_qidx3_qnn3_gl1_gr3 | BB-QCD_cut(800, 1000)_ptc8_bin10-500_R0 | 20231105_slurm_0/checkpoints/epoch=29-step=2400.ckpt\n",
-      "# ModelLog: Quantum device  = qiskit.ibmq | Qubits (IR, WK, NR) = (2, 1, 3)\n",
-      "ModelLog: model.phi.net.0.weights ---> phi.net.0.weights\n",
-      "ModelLog: model.mlp.net.weight ---> mlp.net.weight\n",
-      "ModelLog: model.mlp.net.bias ---> mlp.net.bias\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "qidx = int(np.ceil(np.log2(config[\"num_pt_ptcs\"])))\n",
-    "qnn, gl, gr  = 9, 1, 9\n",
+    "qnn, gl, gr  = 3, 1, 3\n",
     "data_configs = [\n",
     "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
     "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
@@ -148,20 +95,19 @@
     "    model.eval()\n",
     "    return model(x)\n",
     "\n",
-    "result = {}\n",
     "ibmq_backend = input(\"Enter IBMQ backend = \")\n",
     "for data_config in data_configs:\n",
     "    data_module = g_main.generate_datamodule(data_config, graph=False)\n",
-    "    assert len(data_module.test_dataloader()) == 1, \"Check batch size, require 1 batch only\"\n",
-    "    for x, y_true in data_module.test_dataloader():\n",
-    "        y_penl, meas_penl = prediction(x, {\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"})\n",
-    "        y_ibmq, meas_ibmq = prediction(x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend})\n",
-    "        y_qasm, meas_qasm = prediction(x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": \"ibmq_qasm_simulator\"})\n",
-    "    channel_result = {\"x\":x, \"y_true\":y_true, \"y_penl\":y_penl, \"meas_penl\":meas_penl, \"y_qasm\":y_qasm, \"meas_qasm\":meas_qasm, \"y_ibmq\":y_ibmq, \"meas_ibmq\":meas_ibmq}\n",
-    "    result[data_config[\"abbrev\"]] = channel_result\n",
-    "\n",
-    "npy_file = os.path.join(ibmq_dir, f\"{ibmq_backend}_r{config['rnd_seed']}-p_{config['num_pt_ptcs']}_n{config['num_bin_data']}_b{config['batch_size']}-{qnn}_{gl}_{gr}.npy\")\n",
-    "np.save(npy_file, result, allow_pickle=True)"
+    "    x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
+    "    for _x, _y_true in data_module.test_dataloader():\n",
+    "        _y_penl, _meas_penl = prediction(_x, {\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"})\n",
+    "        _y_ibmq, _meas_ibmq = prediction(_x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend})\n",
+    "        x, y_true = torch.cat((x, _x)), torch.cat((y_true, _y_true))\n",
+    "        y_penl, meas_penl = torch.cat((y_penl, _y_penl)), torch.cat((meas_penl, _meas_penl))\n",
+    "        y_ibmq, meas_ibmq = torch.cat((y_ibmq, _y_ibmq)), torch.cat((meas_ibmq, _meas_ibmq))\n",
+    "    result = {\"x\":x, \"y_true\":y_true, \"y_penl\":y_penl, \"meas_penl\":meas_penl, \"y_ibmq\":y_ibmq, \"meas_ibmq\":meas_ibmq}\n",
+    "    npy_file = os.path.join(ibmq_dir, f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_r{config['rnd_seed']}-p_{config['num_pt_ptcs']}_n{config['num_bin_data']}_b{config['batch_size']}-{qnn}_{gl}_{gr}.npy\")\n",
+    "    np.save(npy_file, result, allow_pickle=True)"
    ]
   }
  ],
