20231229 Add docstring and use PEP8 style for g_main.py and module_*.py

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "shots = 1024\n",
     "\n",
-    "config = g_main.json_config[\"config\"]\n",
+    "config = g_main.config\n",
     "config[\"batch_size\"]   = 10 # 300\n",
-    "config[\"rnd_seed\"]     = 0\n",
+    "config[\"rnd_seed\"]     = 2\n",
     "config[\"num_pt_ptcs\"]  = 4\n",
     "config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
     "L.seed_everything(config[\"rnd_seed\"])\n",
@@ -55,8 +55,6 @@
     "        self.mlp = module_model.ClassicalMLP(in_channel=num_nr_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
-    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x, meas = self.phi(x)\n",
     "        x = self.mlp(x)\n",
     "        return x.detach(), meas"
@@ -69,7 +67,7 @@
    "outputs": [],
    "source": [
     "qidx = int(np.ceil(np.log2(config[\"num_pt_ptcs\"])))\n",
-    "qnn, gl, gr  = 3, 1, 3\n",
+    "qnn, gl, gr  = 6, 1, 6\n",
     "data_configs = [\n",
     "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
     "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
@@ -89,7 +87,7 @@
     "    model_name   = QuantumRotQCGNN.__name__\n",
     "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "    ckpt_key  = f\"{model_name}_{model_suffix} | {data_config['abbrev']}_cut{data_config['cut']}\"\n",
-    "    ckpt_path = g_main.get_ckpt(ckpt_key)\n",
+    "    ckpt_path = g_main.get_ckpt_path(ckpt_key)\n",
     "    model     = QuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
     "    load_state_dict(model, ckpt_path)\n",
     "    model.eval()\n",
