20231231 Add PEP8 and docstring for demos | Change config & dir names

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -7,9 +7,9 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import pandas as pd\n",
     "import lightning as L\n",
     "import numpy as np\n",
     "\n",
@@ -18,14 +18,19 @@
     "\n",
     "shots = 1024\n",
     "\n",
-    "config = g_main.config\n",
-    "config[\"batch_size\"]   = 10 # 300\n",
-    "config[\"rnd_seed\"]     = 2\n",
-    "config[\"num_pt_ptcs\"]  = 4\n",
-    "config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
-    "L.seed_everything(config[\"rnd_seed\"])\n",
+    "general_config = g_main.json_config.copy()\n",
+    "general_config[\"batch_size\"]   = 10 # 300\n",
+    "general_config[\"rnd_seed\"]     = 1\n",
+    "general_config[\"num_pt_ptcs\"]  = 4\n",
+    "general_config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
+    "L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
-    "ibmq_dir = \"./ibmq\"\n",
+    "# Quantum configurations.\n",
+    "qidx = int(np.ceil(np.log2(general_config[\"num_pt_ptcs\"])))\n",
+    "qnn, gl, gr  = 9, 1, 9\n",
+    "\n",
+    "# Output directory.\n",
+    "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")\n",
     "os.makedirs(ibmq_dir, exist_ok=True)"
    ]
   },
@@ -36,27 +41,52 @@
    "outputs": [],
    "source": [
     "class IBMQQCGNN(module_model.QCGNN):\n",
+    "    \"\"\"Return additional measurement outputs.\"\"\"\n",
     "    def forward(self, x):\n",
+    "        # Original workflow.\n",
+    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x = self.net(x)\n",
-    "        x = torch.unflatten(x, dim=-1, sizes=(2**self.num_ir_qubits, self.num_nr_qubits))\n",
+    "        x = torch.unflatten(\n",
+    "            x, dim=-1, sizes=(2**self.num_ir_qubits, self.num_nr_qubits))\n",
+    "\n",
+    "        # Additional measurement outputs.\n",
+    "        meas = x.detach() # Measurement outputs.\n",
+    "        \n",
+    "        # Original workflow.\n",
     "        x = x.mT\n",
-    "        meas = x.detach()\n",
     "        x = torch.sum(x, dim=-1) * self.scale\n",
+    "        \n",
     "        return x, meas\n",
     "\n",
-    "class QuantumRotQCGNN(nn.Module):\n",
+    "class IBMQQuantumRotQCGNN(g_main.QuantumRotQCGNN):\n",
     "    def __init__(self, num_ir_qubits, num_nr_qubits, num_layers, num_reupload, quantum_config):\n",
-    "        super().__init__()\n",
-    "        if \"qiskit\" in quantum_config[\"qdevice\"]:\n",
-    "            ctrl_enc = lambda _input, control_values: g_main.qiskit_encoding(_input, control_values, num_ir_qubits, num_nr_qubits)\n",
-    "        else:\n",
-    "            ctrl_enc = lambda _input, control_values: g_main.pennylane_encoding(_input, control_values, num_ir_qubits, num_nr_qubits)\n",
-    "        self.phi = IBMQQCGNN(num_ir_qubits, num_nr_qubits, num_layers, num_reupload, ctrl_enc=ctrl_enc, shots=shots, **quantum_config)\n",
-    "        self.mlp = module_model.ClassicalMLP(in_channel=num_nr_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
+    "        \"\"\"Change phi from QCGNN to IBMQQCGNN.\"\"\"\n",
+    "        super().__init__(\n",
+    "            num_ir_qubits=num_ir_qubits,\n",
+    "            num_nr_qubits=num_nr_qubits,\n",
+    "            num_layers=num_layers,\n",
+    "            num_reupload=num_reupload,\n",
+    "            quantum_config=quantum_config,\n",
+    "        )\n",
+    "        \n",
+    "        # Substitute QCGNN with IBMQQCGNN.\n",
+    "        self.phi = IBMQQCGNN(\n",
+    "            num_ir_qubits=num_ir_qubits,\n",
+    "            num_nr_qubits=num_nr_qubits,\n",
+    "            num_layers=num_layers,\n",
+    "            num_reupload=num_reupload,\n",
+    "            ctrl_enc=self.ctrl_enc,\n",
+    "            shots=shots,\n",
+    "            **quantum_config\n",
+    "        )\n",
     "    \n",
     "    def forward(self, x):\n",
+    "        # Additional measurement outputs from IBMQQCGNN.\n",
     "        x, meas = self.phi(x)\n",
+    "\n",
+    "        # Original workflow.\n",
     "        x = self.mlp(x)\n",
+    "\n",
     "        return x.detach(), meas"
    ]
   },
@@ -66,46 +96,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qidx = int(np.ceil(np.log2(config[\"num_pt_ptcs\"])))\n",
-    "qnn, gl, gr  = 6, 1, 6\n",
-    "data_configs = [\n",
-    "    {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"abbrev\":\"BB-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
-    "    {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"abbrev\":\"TT-QCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":config[\"num_bin_data\"], \"num_pt_ptcs\":config[\"num_pt_ptcs\"]},\n",
-    "]\n",
+    "def load_state_dict(model: nn.Module, ckpt_path: str):\n",
+    "    \"\"\"Load model checkpoints parameters.\n",
+    "    \n",
+    "    Args:\n",
+    "        model : nn.Module\n",
+    "            Model to be load state dict.\n",
+    "        ckpt_path : str\n",
+    "            Path of checkpoints.\n",
+    "    \"\"\"\n",
     "\n",
-    "def load_state_dict(model, ckpt_path):\n",
+    "    # The keys of ckpt state_dict somehow different than loading keys.\n",
     "    old_state_dict = torch.load(ckpt_path)[\"state_dict\"]\n",
     "    new_state_dict = {}\n",
     "    for old_key in old_state_dict.keys():\n",
+    "        # Containing prefix \"model.\", no need this prefix.\n",
     "        new_key = old_key[6:]\n",
-    "        print(f\"ModelLog: {old_key} ---> {new_key}\")\n",
+    "        print(f\"state_dict key updated: {old_key} ---> {new_key}\")\n",
     "        new_state_dict[new_key] = old_state_dict[old_key]\n",
     "    model.load_state_dict(new_state_dict)\n",
     "\n",
-    "def prediction(x, quantum_config):\n",
-    "    # load model\n",
-    "    model_name   = QuantumRotQCGNN.__name__\n",
+    "def prediction(x, general_config, data_config, quantum_config):\n",
+    "    # Choose pretrained model with number of particles = 8 -> qidx = log2(8) = 3\n",
     "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
-    "    ckpt_key  = f\"{model_name}_{model_suffix} | {data_config['abbrev']}_cut{data_config['cut']}\"\n",
+    "\n",
+    "    # Get checkpoints file.\n",
+    "    ckpt_key = f\"QuantumRotQCGNN_{model_suffix} | {data_config['abbrev']}_cut{data_config['cut_pt']}\"\n",
     "    ckpt_path = g_main.get_ckpt_path(ckpt_key)\n",
-    "    model     = QuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
+    "    \n",
+    "    # Create model and load checkpoints.\n",
+    "    model = IBMQQuantumRotQCGNN(qidx, qnn, gl, gr, quantum_config)\n",
     "    load_state_dict(model, ckpt_path)\n",
     "    model.eval()\n",
-    "    return model(x)\n",
-    "\n",
+    "    \n",
+    "    return model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recreate a new data configuration list.\n",
+    "data_config_list = [\n",
+    "    # 2-prong v.s. 1-prong.\n",
+    "    g_main.generate_data_config(\n",
+    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, \n",
+    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "    ),\n",
+    "    \n",
+    "    # 3-prong v.s. 1-prong.\n",
+    "    g_main.generate_data_config(\n",
+    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, \n",
+    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "    ),\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose an IBMQ backend\n",
     "ibmq_backend = input(\"Enter IBMQ backend = \")\n",
-    "for data_config in data_configs:\n",
-    "    data_module = g_main.generate_datamodule(data_config, graph=False)\n",
+    "\n",
+    "# Prediction on IBMQ.\n",
+    "for data_config in data_config_list:\n",
+    "    \n",
+    "    # Create the data module.\n",
+    "    data_module = g_main.generate_datamodule(\n",
+    "        data_config=data_config,\n",
+    "        data_ratio=general_config[\"data_ratio\"],\n",
+    "        batch_size=general_config[\"batch_size\"],\n",
+    "        graph=False\n",
+    "    )\n",
+    "\n",
+    "    # Buffers for saving data.\n",
     "    x, y_true, y_penl, meas_penl, y_ibmq, meas_ibmq = [torch.tensor([]) for _ in range(6)]\n",
     "    for _x, _y_true in data_module.test_dataloader():\n",
-    "        _y_penl, _meas_penl = prediction(_x, {\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"})\n",
-    "        _y_ibmq, _meas_ibmq = prediction(_x, {\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend})\n",
+    "        \n",
+    "        # Prediction on PennyLane.\n",
+    "        _y_penl, _meas_penl = prediction(\n",
+    "            x=_x,\n",
+    "            general_config=general_config,\n",
+    "            data_config=data_config,\n",
+    "            quantum_config={\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"}\n",
+    "        )\n",
+    "\n",
+    "        # Prediction on IBMQ.\n",
+    "        _y_ibmq, _meas_ibmq = prediction(\n",
+    "            x=_x,\n",
+    "            general_config=general_config,\n",
+    "            data_config=data_config,\n",
+    "            quantum_config={\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend}\n",
+    "        )\n",
+    "\n",
+    "        # Dataset and true labels.\n",
     "        x, y_true = torch.cat((x, _x)), torch.cat((y_true, _y_true))\n",
+    "        \n",
+    "        # Save predictions to buffers.\n",
     "        y_penl, meas_penl = torch.cat((y_penl, _y_penl)), torch.cat((meas_penl, _meas_penl))\n",
     "        y_ibmq, meas_ibmq = torch.cat((y_ibmq, _y_ibmq)), torch.cat((meas_ibmq, _meas_ibmq))\n",
-    "    result = {\"x\":x, \"y_true\":y_true, \"y_penl\":y_penl, \"meas_penl\":meas_penl, \"y_ibmq\":y_ibmq, \"meas_ibmq\":meas_ibmq}\n",
-    "    npy_file = os.path.join(ibmq_dir, f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_r{config['rnd_seed']}-p_{config['num_pt_ptcs']}_n{config['num_bin_data']}_b{config['batch_size']}-{qnn}_{gl}_{gr}.npy\")\n",
-    "    np.save(npy_file, result, allow_pickle=True)"
+    "\n",
+    "    # Output dictionary    \n",
+    "    result = {\n",
+    "        \"x\": x, \"y_true\": y_true,\n",
+    "        \"y_penl\": y_penl, \"meas_penl\": meas_penl,\n",
+    "        \"y_ibmq\": y_ibmq, \"meas_ibmq\": meas_ibmq\n",
+    "    }\n",
+    "\n",
+    "    # Save result to npy files.\n",
+    "    npy_file = (\n",
+    "        # backend - shots - abbrev\n",
+    "        f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
+    "\n",
+    "        # rnd_seed - num_pt_ptcs\n",
+    "        + f\"r{general_config['rnd_seed']}-p{general_config['num_pt_ptcs']}_\"\n",
+    "\n",
+    "        # num_bin_data\n",
+    "        + f\"n{general_config['num_bin_data']}_\"\n",
+    "\n",
+    "        # batch_size - qnn_gl_gr\n",
+    "        + f\"b{general_config['batch_size']}-{qnn}_{gl}_{gr}\"\n",
+    "\n",
+    "        # npy suffix.\n",
+    "        + \".npy\"\n",
+    "    )\n",
+    "    npy_path = os.path.join(ibmq_dir, npy_file)\n",
+    "    np.save(npy_path, result, allow_pickle=True)"
    ]
   }
  ],
