--- a/result_check_ckpt.ipynb
+++ b/result_check_ckpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,13 +32,13 @@
       "QuantumRotQCGNN_qidx3_qnn6_gl1_gr9 6\n",
       "QuantumRotQCGNN_qidx3_qnn9_gl1_gr3 6\n",
       "QuantumRotQCGNN_qidx3_qnn9_gl1_gr6 6\n",
-      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9 6\n"
+      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9 7\n"
      ]
     }
    ],
    "source": [
     "ckpt_counter = defaultdict(int)\n",
-    "dir_path = \"./ckpt\"\n",
+    "dir_path = \"./pretrain\"\n",
     "\n",
     "for f in os.listdir(dir_path):\n",
     "    model = f.split()[0]\n",
