--- a/result_ibmq.ipynb
+++ b/result_ibmq.ipynb
@@ -2,18 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from itertools import product\n",
+    "\n",
     "import numpy as np\n",
     "from qiskit_ibm_provider import IBMProvider\n",
-    "from itertools import product"
+    "\n",
+    "import g_main\n",
+    "\n",
+    "general_config = g_main.json_config\n",
+    "ibmq_dir = os.path.join(general_config[\"predictions_dir\"], \"ibmq\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,32 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BB-QCD in backend ibm_cusco:\n",
-      "IBMQ Frobinius norm = 5.611314296722412\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "TT-QCD in backend ibm_cusco:\n",
-      "IBMQ Frobinius norm = 5.236304759979248\n",
-      "----------------------------------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shots = 1024\n",
+    "batch_size = 10\n",
+    "num_pt_ptcs = 4\n",
+    "num_bin_data = 25\n",
     "backends = [\"ibm_cusco\"]\n",
     "\n",
+    "rnd_seed= 2\n",
     "for abbrev, backend in product([\"BB-QCD\", \"TT-QCD\"], backends):\n",
-    "    result = np.load(f\"ibmq/{backend}-s{1024}-{abbrev}_r0-p_4_n25_b10-9_1_9.npy\", allow_pickle=True)\n",
-    "    result = result.item()\n",
-    "    print(f\"{abbrev} in backend {backend}:\")\n",
-    "    print(f\"IBMQ Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_ibmq'])}\")\n",
-    "    print(\"-\"*100)"
+    "    for q in [3, 6]:\n",
+    "        npy_file = (\n",
+    "            f\"{backend}-s{shots}-{abbrev}_\"\n",
+    "            + f\"r{rnd_seed}-p{num_pt_ptcs}_\"\n",
+    "            + f\"n{num_bin_data}_\"\n",
+    "            + f\"b{batch_size}-{q}_1_{q}\"\n",
+    "            + \".npy\"\n",
+    "        )\n",
+    "        result = np.load(os.path.join(ibmq_dir, npy_file), allow_pickle=True)\n",
+    "        result = result.item()\n",
+    "        print(abbrev, q)\n",
+    "        print(result[\"x\"].shape)\n",
+    "        print(result[\"y_true\"].shape)\n",
+    "        print(result[\"y_penl\"].shape)\n",
+    "        print()\n",
+    "        # print(f\"{abbrev} in backend {backend}:\")\n",
+    "        # print(f\"IBMQ Frobinius norm = {np.linalg.norm(result['meas_penl']-result['meas_ibmq'])}\")\n",
+    "        # print(\"-\"*100)"
    ]
   }
  ],
