--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -9,17 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0 | BB-QCD_cut(800, 1000)_ptc8_bin10-1_R0 | 456456456_456456456_456456456_0\n"
+     ]
+    }
+   ],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20231212\"\n",
-    "suffix  = \"\"\n",
+    "date    = \"\"\n",
+    "suffix  = \"456456456\"\n",
     "project = \"g_main\"\n",
-    "state   = \"crashed\"\n",
+    "state   = \"finished\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    # if date in run.id and suffix in run.id:\n",
