20240102 Fix data_module_list redundency

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -150,7 +150,7 @@
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    g_main.generate_data_config(\n",
-    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "        sig=\"VzToZhToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
     "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
     "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
