--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -955,7 +955,7 @@
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    generate_data_config(\n",
-    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
     "        bin=10, num_bin_data=general_config[\"num_bin_data\"], num_pt_ptcs=8\n",
     "    ),\n",
